--- a/数据操作/数据操作.html
+++ b/数据操作/数据操作.html
@@ -82,8 +82,127 @@
     5、排序（按年龄从大到小-从小到大）
     6、如果是在排序的状态，添加后依然保持排序
 */
+var tbody = $('tbody')[0];
+var trs = $('tr',tbody);
 
+//根据data,生成结构
+render();
+function render(){
+    var html = data.map(function(item){
+        return`
+            <tr>
+                <td>
+                    <input data-id='${item.id}' type="checkbox"/>
+                </td>
+                <td>${item.id}</td>
+                <td>${item.username}</td>
+                <td>${item.age}</td>
+                <td>${item.sex}</td>
+                <td>
+                    <a data-id='${item.id}' href="javascript:;">删除</a>
+                </td>
+            </tr>`
+    }).join('');
+    tbody.innerHTML = html;
+}
 
+var inputs = $('input',tbody);
+
+//删除结构，删除数据
+var checkAll = $('#checkAll');
+tbody.onclick = function (ev){
+    if(ev.target.nodeName === 'A'){
+        ev.target.parentNode.parentNode.remove();
+        if(inputs.length === 0){
+            checkAll.disabled = true;
+        }
+        var id = ev.target.dataset.id;
+        //删除数据
+        for(var i = 0;i < data.length;i++){
+            if(data[i].id == id){
+                data.splice(i,1);
+                break;
+            }
+        }
+        changeColor();
+    }
+
+    var n = 0;
+    for(var i = 0;i < inputs.length;i++){
+        if(inputs[i].checked){
+            n++;
+        }
+    }
+
+    if(n == inputs.length && n != 0){
+        checkAll.checked = true;
+    }
+
+    if(ev.target.nodeName === 'INPUT'){
+        var m = 0;
+        for(var i = 0;i < inputs.lenght;i++){
+            if(inputs[i].checked){
+                m++;
+            }
+       }
+       if(m === inputs.length){
+            checkAll.checked = true;
+       }else{
+            checkAll.checked = false;
+       }
+    }
+}
+
+//全选
+var checkAll = $('#checkAll');
+checkAll.onclick = function (){
+    for(var i = 0;i < inputs.length;i++){
+        inputs[i].checked = this.checked;
+    }
+}
+
+//删除选中的
+var delectAll = $('#delectAll');
+delectAll.onclick = function (){
+    var selectArr = [];
+    for(var i = 0;i < inputs.length;i++){
+        if(inputs[i].checked){
+            selectArr.push(inputs[i]);
+        }
+    }
+    if(selectArr.length === 0){
+        alert('请选择要删除的数据');
+    }else{
+        for(var i = 0;i < selectArr.length;i++){
+            selectArr[i].parentNode.parentNode.remove();
+            var id = selectArr[i].dataset.id;
+            for(var j = 0;j < data.length;j++){
+                if(data[j].id == id){
+                    data.splice(j,1);
+                    break;
+                }
+            }
+        }
+        // 批量删除数据
+        if(inputs.length === 0){
+            checkAll.checked = false;
+            checkAll.disabled = true;
+        }
+        changeColor();
+    }
+}
+
+//隔行变色
+changeColor();
+function changeColor(){
+    for(var i = 0;i < trs.length; i++){
+        if(i % 2 === 0){
+            trs[i].style.background = '#fe0';
+        }else{
+            trs[i].style.background = '#fff';
+        }
+    }   
+}
 
 </script>
 </body>
