--- a/微云网盘/index.html
+++ b/微云网盘/index.html
@@ -259,7 +259,7 @@ function createFileHtml (id){
 	if(childs.length){
 		bgBox.style.display = 'none';
 		var filesHtml = childs.map(function(item){
-			return `<li data-id="${item.id}">
+			return `<li class='a' data-id="${item.id}">
 						<a href="javascript:;" class="active">
 							<span></span>
 							<strong>${item.title}</strong>
@@ -343,6 +343,7 @@ function clickNavA (){
 
 /*------------ 给内容区的每个元素绑定事件 ------------*/
 
+var chooseAll = document.querySelector('.choose');
 clickFileLi()
 function clickFileLi (){
 	var fileLi = docList.getElementsByTagName('li');
@@ -359,93 +360,158 @@ function clickFileLi (){
 			clickFileLi();
 		}
 	}
+	chooseAll.classList.remove('chooseActive');
 }
 
-/*------------ 给内容区的每个多选按钮绑定事件 ------------*/
-var n = 0;
+/*------------ 全选 ------------*/
+
+function on(element,evName,fn){
+	element.addEventListener(evName,fn);	
+}
+function off(element,evName,fn){
+	element.removeEventListener(evName,fn);		
+}
+
 var spans = docList.getElementsByTagName('span');
-docList.onclick = function (ev){
-	if(ev.target.nodeName === 'SPAN'){
-		//console.log(ev.target)
-		if(ev.target.className == 'doc-choose'){
-			n--;
-			ev.target.className = '';
-			ev.target.style.visibility = 'hidden';
-			ev.target.parentNode.parentNode.className = '';
-			for(var i = 0;i < spans.length;i++){
-				if(n !== spans.length){
-					chooseAll.classList.remove('chooseActive');
-				}
-			}
-		}else{
-			n++;
-			ev.target.className = 'doc-choose';
-			ev.target.style.visibility = 'visible';
-			ev.target.parentNode.parentNode.className = 'active';
-			for(var i = 0;i < spans.length;i++){
-				if(n == spans.length){
-					chooseAll.classList.add('chooseActive');
-				}
-			}
-		}	
-	}
-}
-
-
-/*------------ 给menu区域中的全选按钮绑定事件 ------------*/
-
-var chooseAll = document.querySelector('.choose');
-var offOn = true;
-chooseAll.onclick = function(){
-	if(offOn){
-		for(var i = 0;i<spans.length;i++ ){
-			this.classList.add('chooseActive');
-			spans[i].classList.add('doc-choose');
-			spans[i].style.visibility = 'visible';
-			spans[i].parentNode.parentNode.className = 'active';
-		}
-		offOn = false;
-	}else{
-		for(var i = 0;i<spans.length;i++ ){
-			this.classList.remove('chooseActive');
-			spans[i].classList.remove('doc-choose');
-			spans[i].style.visibility = 'hidden';
-			spans[i].parentNode.parentNode.className = '';
-		}
-		offOn = true;
-	}
-}
-
-/*------------ 鼠标拖拽选区选中文件 ------------*/
 
 var lis = docList.getElementsByTagName('li');
 
-document.onmousedown = function (ev){
+on(chooseAll,'click',function(){
+	var bl = this.classList.toggle('chooseActive');
+	if(bl){
+		for(var i = 0;i < spans.length;i++){
+			spans[i].classList.add('doc-choose');
+			lis[i].classList.add('active');
+		}
+	}else{
+		for(var i = 0;i < spans.length;i++){
+			spans[i].classList.remove('doc-choose');
+			lis[i].classList.remove('active');
+		}
+	}
+})
+
+/*------------ 单选 ------------*/
+
+var spansChecked = docList.getElementsByClassName('doc-choose');
+on(docList,'click',function(ev){
+	if(ev.target.nodeName === 'SPAN'){
+		var bl = ev.target.classList.toggle('doc-choose');
+		if(bl){
+			//ev.target.style.visibility = 'visible';
+			ev.target.parentNode.parentNode.classList.add("active");
+		}else{
+			//ev.target.style.visibility = 'hidden';
+			ev.target.parentNode.parentNode.classList.remove('active');
+		}
+
+		if(spansChecked.length === spans.length){
+			chooseAll.classList.add('chooseActive');
+		}else{
+			chooseAll.classList.remove('chooseActive');
+		}
+		
+	}
+})
+
+on(docList,'click',function(ev){
+	var target = ev.target;
+	if(target.classList.contains('doc-list')){
+		return;
+	}
+	if(target === 'SPAN'){
+		return;
+	}
+	if(target.parentNode.classList.contains('a')){
+		target = target.parentNode;
+	}
+})
+
+
+
+
+/*------------ 框选 ------------*/
+var cont = document.querySelector('.cont')
+
+for( var i = 0 ; i < spans.lenght ; i++ ){
+	on(spans[i],'mousedown',function(ev){
+		ev.stopPropagation();
+		ev.preventDefault();
+	})
+}
+
+on(cont,'mousedown',function(ev){
+	ev.preventDefault();
 	var newDiv = document.createElement("div");
 	newDiv.className = 'newArea';
-	document.body.appendChild(newDiv);	
+	
 
 	var disX = ev.clientX;
 	var disY = ev.clientY;
-
 	newDiv.style.left = disX + 'px';
 	newDiv.style.top = disY + 'px';
 
-	document.onmousemove = function (ev){
-		
+	//document.body.appendChild(newDiv);
+	
+	on(document,'mousemove',moveFn);
+	on(document,'mouseup', upFn);
+
+	function moveFn(ev){
+
+		if(Math.abs(ev.clientX - disX > 10 || Math.abs(ev.clientY - disY) > 10) && !newDiv.isAppend){
+			document.body.appendChild(newDiv);
+			newDiv.isAppend = true;
+		}
+
 		newDiv.style.width = Math.abs(ev.clientX - disX) + 'px';
 		newDiv.style.height = Math.abs(ev.clientY - disY) + 'px';
+		newDiv.style.left = Math.min(ev.clientX,disX) + 'px';
+		newDiv.style.top = Math.min(ev.clientY,disY) + 'px';
 
-		newDiv.style.left = Math.min(disX,ev.clientX) + 'px';	
-		newDiv.style.top = Math.min(disY,ev.clientY) + 'px';	
-	};
-
-	document.onmouseup = function (){
-		document.onmousemove = null;
-		newDiv.remove();	
+		for(var i = 0; i < lis.length; i++){
+			if(collision(newDiv,lis[i])){
+				lis[i].classList.add('active');
+				//console.log(lis[i].children.firstElementChild)
+				console.log(lis[i].firstElementChild.firstElementChild)
+				lis[i].firstElementChild.firstElementChild.classList.add('doc-choose');
+			}else{
+				lis[i].classList.remove('active');
+				lis[i].firstElementChild.firstElementChild.classList.remove('doc-choose');
+			}
+		}
+		chooseAll.classList.remove('chooseActive');
 	}
-	ev.preventDefault();
+	function upFn(){
+		off(document,'mousemove',moveFn);
+		off(document,'mouseup',upFn);
+		if(newDiv.isAppend){
+			document.body.removeChild(newDiv);
+		}
+		
+		
+		var spansChecked = docList.getElementsByClassName('doc-choose');
+		if(spansChecked.length === lis.length){
+			chooseAll.classList.add('chooseActive');
+		}else{
+			chooseAll.classList.remove('chooseActive');
+		}
+	}
+
+})
+
+// 碰撞检测函数
+function collision(obj1,obj2){
+	var obj1Rect = obj1.getBoundingClientRect();	
+	var obj2Rect = obj2.getBoundingClientRect();	
+
+	if(obj1Rect.right < obj2Rect.left || obj1Rect.bottom < obj2Rect.top || obj1Rect.left > obj2Rect.right || obj1Rect.top > obj2Rect.bottom){
+		return false;
+	}else{
+		return true;
+	}
 }
+
+
 
 
 
