--- a/微云网盘/index.html
+++ b/微云网盘/index.html
@@ -23,6 +23,28 @@
 	</div>
 </div>
 
+<div class="moveAddress">
+	<h3>选择存储位置</h3>
+	<h5><i></i>JS基础课程</h5>
+	<div class="moveBox">
+		<ul>
+			<li>
+				<a href="javascript:;" class="clear"><i></i><span class="doc-open">JS课程</span></a>
+				<ul>
+					<li>
+						<a href="javascript:;" class="clear"><i></i><span class="doc-open">JS课程</span></a>
+					</li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+	<p>
+		<a href="javascript:;">确定</a>
+		<a href="javascript:;">取消</a>
+	</p>
+	<b></b>
+</div>
+
 <div class="topInfo clear">
 	<div class="left clear">
 		<h1><a href="javascript:;"><img src="images/logo.png">妙味云盘</a></h1>
@@ -358,6 +380,11 @@ function clickFileLi (){
 	var fileLi = docList.getElementsByTagName('li');
 	for( var i = 0;i < fileLi.length;i++){
 		fileLi[i].onclick = function (ev){
+			if(ev.target.nodeName === 'INPUT'){
+				ev.target.select();
+				//ev.target.style.borderColor = '#55addc';
+				return;
+			}
 			var fileLiId = this.dataset.id;
 			if(ev.target.nodeName === 'SPAN'){
 				return false;
@@ -446,13 +473,13 @@ on(docList,'click',function(ev){
 
 var cont = document.querySelector('.cont')
 
-/*for( var i = 0 ; i < spans.lenght ; i++ ){
+for( var i = 0 ; i < spans.length ; i++ ){
 	on(spans[i],'mousedown',function(ev){
 		ev.stopPropagation();
 		ev.preventDefault();
 	})
 }
-*/
+
 on(cont,'mousedown',function(ev){
 	//ev.preventDefault();
 	if(lis.length === 0){
@@ -474,7 +501,7 @@ on(cont,'mousedown',function(ev){
 
 	function moveFn(ev){
 
-		if(Math.abs(ev.clientX - disX > 10 || Math.abs(ev.clientY - disY) > 10)){
+		if(Math.abs(ev.clientX - disX > 20 || Math.abs(ev.clientY - disY) > 20)){
 			if(!newDiv.isAppend){
 				document.body.appendChild(newDiv);
 				newDiv.isAppend = true;
@@ -536,6 +563,7 @@ function collision(obj1,obj2){
 				3> 文件夹名称为空，创建不成功
 
 */
+
 var newFile = document.querySelector('.left li:nth-child(6)');
 
 on(newFile,'mouseup',function(ev){
@@ -702,7 +730,7 @@ on(btnSure,'click',function(){
 	}
 
 	for(var i = 0;i < selectArr.length;i++){
-		console.log(selectArr[i].parentNode.parentNode);
+		//console.log(selectArr[i].parentNode.parentNode);
 		selectArr[i].parentNode.parentNode.remove();
 		delectDataById(selectArr[i].parentNode.parentNode.dataset.id);
 	}
@@ -775,7 +803,6 @@ on(closeTip,'click',function(){
 var reName = document.querySelector('.left li:nth-child(4)');
 var state = false;
 var oldValue = '';
-var newValue = '';
 on(reName,'click',function(ev){
 	if(spansChecked.length === 0){
 		tipSelectFile.innerHTML = '<i></i>请选择文件';
@@ -802,7 +829,6 @@ on(reName,'click',function(ev){
 					input.style.borderColor = '#55addc';
 				}
 			}
-			
 			state = true;
 		}else{
 			tipSelectFile.innerHTML = '<i></i>每次只能重新命名一个文件夹';
@@ -821,24 +847,33 @@ on(reName,'click',function(ev){
 
 	}
 })
+
+//通过id value 值判断是否有重复的value 有重复 返回true
+function isExistNameById(id,value){
+	var childs = getChildsById(id);
+	for( var i = 0; i < childs.length; i++ ){
+		if(childs[i].title === value){
+			return true;
+		}
+	}
+	return false;
+}
+
 on(document,'mouseup',function(){
 	var inputs = docList.getElementsByTagName('input');
-	if(state){
-		var isExistName = false;
-		var id = navBar.lastElementChild.dataset.id;//当前id
-		var childs = getChildsById(id);//当前id下所有的子集
-		for(var i = 0;i < childs.length;i++){
-			if(childs[i].title === newValue){
-				isExistName = true;
-				break;
-			}
-		}
+	var id = navBar.lastElementChild.dataset.id;//当前id
 
-		//命名文件夹重名提示
-		if(isExistName){
+	if(docList.firstElementChild){
+		var firstLi = docList.firstElementChild;
+		var newInput = firstLi.getElementsByTagName('input')[0];
+		var value = newInput.value.trim();
+	}
+
+	if(state){
+		if(isExistNameById(id,value)){
+			//firstLi.remove();
+			newInput.value = oldValue;
 			tipSelectFile.innerHTML = '<i></i>文件夹有重名，不能命名';
-			console.log(newValue,oldValue)
-			newValue = oldValue;
 			mTween(tipSelectFile,{
 	            top: 15,
 	            opacity:1
@@ -850,8 +885,12 @@ on(document,'mouseup',function(){
 	        		},400)
 	        	},600)
 	        })
+		}else{
+			data[firstLi.dataset.id].title  = value;
+			left.innerHTML = createTreeHtml(initId,leval);
+			positionElement(id);
+			clickTree();
 		}
-
 		for(var i = 0;i < inputs.length;i++){
 			inputs[i].style.borderColor = 'transparent';
 			inputs[i].parentNode.parentNode.classList.remove('active');
@@ -860,6 +899,10 @@ on(document,'mouseup',function(){
 	}
 	state = false;
 })
+
+document.onmousedown = function(ev){
+	ev.preventDefault();
+}
 </script>
 </body>
 </html>
